Fixing Background video overflow

--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,8 @@ body {
   height: 100%;
   width: 100%;
   z-index: -1;
-  opacity: .15; }
+  opacity: .15;
+  overflow: hidden; }
   .bg-video__content {
     height: 100%;
     width: 100%;
